--- a/multi_stations_model.ipynb
+++ b/multi_stations_model.ipynb
@@ -250,6 +250,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "itqE6ZTkKYSi"
+      },
+      "source": [
+        "Cluster the list of Bike Station into N groups (i.e., N=10)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1252,7 +1261,7 @@
         "id": "nmynnPBSPyG9"
       },
       "source": [
-        "# Back up the df for \n",
+        "# Back up the df\n",
         "original_df = df.copy()"
       ],
       "execution_count": null,
@@ -3845,7 +3854,7 @@
         "outputId": "155bfd6f-a25a-4553-b1f3-4eaea0e29803"
       },
       "source": [
-        "# Read the csv file that save the metrics for all Clusters\n",
+        "# The csv file for saving the metrics for the remaining Clusters\n",
         "clt_metrics = pd.read_csv('drive/MyDrive/dublinbikes/clustered_stations_metrics.csv')\n",
         "clt_metrics"
       ],
