--- a/single_station_model.ipynb
+++ b/single_station_model.ipynb
@@ -130,8 +130,7 @@
         "#stations_df = pd.DataFrame.from_dict(data, orient=\"columns\")\n",
         "# ----------------------------------------------------------------------\n",
         "\n",
-        "#stations_df = pd.read_csv(\"drive/MyDrive/dublinbikes/datasets/station_list.csv\")\n",
-        "stations_df = pd.read_csv(\"drive/MyDrive/dublinbikes/single_station_metrics_new.csv\")\n",
+        "stations_df = pd.read_csv(\"drive/MyDrive/dublinbikes/datasets/station_list.csv\")\n",
         "stations_df"
       ],
       "execution_count": null,
@@ -1219,7 +1218,7 @@
         "# UPDATE:\n",
         "# From 26/8/2021, the API https://dublinbikes.staging.derilinx.com/api/v1\n",
         "# has been shut down. You can not get data from this API.\n",
-        "# So the data will be loaded from the CSV file that I already collected from\n",
+        "# So the data will be loaded from the CSV files that I already collected from\n",
         "# this API in June/2021\n",
         "\n",
         "# ----------------------------------------------------------------------\n",
